force-app/main/default/objects/InformeEDC__c/InformeEDC__c.object-meta.xml
<CustomObject>
    <description>Creado específicamente con el fin de completar un informe que incluya diversos campos que no pueden relacionarse en un reporte estándar.</description>
    <label>Informe EDC</label>
    <nameField>
        <displayFormat>ES-{0000000000}</displayFormat>
        <label>Informe EDC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informe EDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>