force-app/main/default/objects/InformeEDC__c/fields/Abierto__c.field-meta.xml
<CustomField>
    <fullName>Abierto__c</fullName>
    <formula>AND(TEXT(FechaQueSeAbrio__c) &lt;&gt; &quot;Z&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Abierto?</label>
    <type>Checkbox</type>
</CustomField>