force-app/main/default/objects/InformeEDC__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <formula>&quot;Correo electrónico: Estado de cuenta&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asunto</label>
    <type>Text</type>
</CustomField>