force-app/main/default/objects/InformeEDC__c/fields/ClienteUnicoBanco__c.field-meta.xml
<CustomField>
    <fullName>ClienteUnicoBanco__c</fullName>
    <formula>Cliente__r.Cliente_Unico_Banco__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Unico banco</label>
    <type>Text</type>
</CustomField>