force-app/main/default/objects/InformeEDC__c/fields/CorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronico__c</fullName>
    <formula>Cliente__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo Electronico</label>
    <type>Text</type>
</CustomField>