force-app/main/default/objects/InformeEDC__c/fields/FechaEnvio__c.field-meta.xml
<CustomField>
    <fullName>FechaEnvio__c</fullName>
    <label>Fecha de Envío</label>
    <type>DateTime</type>
</CustomField>