force-app/main/default/objects/InformeEDC__c/fields/FechaQueSeAbrio__c.field-meta.xml
<CustomField>
    <fullName>FechaQueSeAbrio__c</fullName>
    <label>Fecha en que se abrió</label>
    <type>DateTime</type>
</CustomField>