force-app/main/default/objects/InformeEDC__c/fields/FPC_Abierto__c.field-meta.xml
<CustomField>
    <fullName>FPC_Abierto__c</fullName>
    <formula>IF(TEXT(FechaQueSeAbrio__c) &lt;&gt; &quot;Z&quot;, &quot;Si&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Abierto?</label>
    <type>Text</type>
</CustomField>