force-app/main/default/objects/InformeEDC__c/fields/FPC_Dominio__c.field-meta.xml
<CustomField>
    <fullName>FPC_Dominio__c</fullName>
    <label>Dominio</label>
    <length>40</length>
    <type>Text</type>
</CustomField>