force-app/main/default/objects/InformeEDC__c/fields/FPC_Enviado__c.field-meta.xml
<CustomField>
    <fullName>FPC_Enviado__c</fullName>
    <formula>IF(ISPICKVAL(FPC_MotivoError__c ,&apos;&apos;), &quot;Si&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Enviado?</label>
    <type>Text</type>
</CustomField>