force-app/main/default/objects/InformeEDC__c/fields/FPC_ErrorEnvio__c.field-meta.xml
<CustomField>
    <fullName>FPC_ErrorEnvio__c</fullName>
    <label>Error de Envío</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>