force-app/main/default/objects/InformeEDC__c/fields/FPC_MotivoError__c.field-meta.xml
<CustomField>
    <fullName>FPC_MotivoError__c</fullName>
    <label>Motivo de Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000</fullName>
                <label>Sin categoria</label>
            </value>
            <value>
                <fullName>421</fullName>
                <label>Servicio no disponible</label>
            </value>
            <value>
                <fullName>422</fullName>
                <label>Limite de buzón</label>
            </value>
            <value>
                <fullName>431</fullName>
                <label>Servidor sin espacio</label>
            </value>
            <value>
                <fullName>432</fullName>
                <label>Problema temporal</label>
            </value>
            <value>
                <fullName>441</fullName>
                <label>Red intermitente</label>
            </value>
            <value>
                <fullName>442</fullName>
                <label>Conexión interrumpida</label>
            </value>
            <value>
                <fullName>446</fullName>
                <label>Demasiados saltos</label>
            </value>
            <value>
                <fullName>447</fullName>
                <label>Tiempo excedido</label>
            </value>
            <value>
                <fullName>449</fullName>
                <label>Problema A DNS</label>
            </value>
            <value>
                <fullName>450</fullName>
                <label>Comando falló</label>
            </value>
            <value>
                <fullName>451</fullName>
                <label>Comando abortado</label>
            </value>
            <value>
                <fullName>452</fullName>
                <label>Comando interrumpido</label>
            </value>
            <value>
                <fullName>465</fullName>
                <label>Problema de idiomas</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>Comando no reconocido</label>
            </value>
            <value>
                <fullName>501</fullName>
                <label>Error de sintaxis</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>Comando no implementado</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>Mala secuencia</label>
            </value>
            <value>
                <fullName>504</fullName>
                <label>Comando no implementado.</label>
            </value>
            <value>
                <fullName>510</fullName>
                <label>Comprobar destinatarios</label>
            </value>
            <value>
                <fullName>511</fullName>
                <label>Problema con destinatarios</label>
            </value>
            <value>
                <fullName>512</fullName>
                <label>Host desconocido</label>
            </value>
            <value>
                <fullName>513</fullName>
                <label>Direccion vacía</label>
            </value>
            <value>
                <fullName>514</fullName>
                <label>Objetos duplicados</label>
            </value>
            <value>
                <fullName>515</fullName>
                <label>Buzón valido</label>
            </value>
            <value>
                <fullName>516</fullName>
                <label>Cambio de buzón</label>
            </value>
            <value>
                <fullName>517</fullName>
                <label>Atributos incorrectos</label>
            </value>
            <value>
                <fullName>521</fullName>
                <label>Mensaje demasiado grande</label>
            </value>
            <value>
                <fullName>522</fullName>
                <label>Limite de buzón.</label>
            </value>
            <value>
                <fullName>523</fullName>
                <label>Tamaño excedido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>