force-app/main/default/objects/InformeEDC__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>