force-app/main/default/objects/InformeEDC__c/fields/NumeroVecesQueSeAbrio__c.field-meta.xml
<CustomField>
    <fullName>NumeroVecesQueSeAbrio__c</fullName>
    <label>Número de veces que se abrió</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>