force-app/main/default/objects/InformeEDC__c/fields/Telfono__c.field-meta.xml
<CustomField>
    <fullName>Telfono__c</fullName>
    <formula>Cliente__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>