force-app/main/default/objects/InformeEDC__c/fields/UltimaFechaQueSeabrio__c.field-meta.xml
<CustomField>
    <fullName>UltimaFechaQueSeabrio__c</fullName>
    <label>Última Fecha en que se abrió</label>
    <type>DateTime</type>
</CustomField>